# setup_jhu_software

./: install_environment.sh
patches/dpwelib/: config.sub
patches/rasta/: CMakeLists.txt
